syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.edu";
option java_outer_classname = "Keymanagergrpc";
option objc_class_prefix = "HLW";

package br.com.zup.edu;

service KeymanagerRegistraGrpcService {
  rpc registra (RegistraChavePixRequest) returns (RegistraChavePixResponse) {}
}

service KeymanagerRemoveGrpcService {
  rpc remove (RemoveChavePixRequest) returns (RemoveChavePixResponse) {}
}

enum TipoChave{
  UNKNOW_KEY_TYPE = 0;
  CPF             = 1;
  CELULAR         = 2;
  EMAIL           = 3;
  ALEATORIO       = 4;
}

enum TipoConta{
  UNKNOW_ACCOUNT_TYPE = 0;
  CONTA_CORRENTE      = 1;
  CONTA_POUPANCA      = 2;
}

message RegistraChavePixRequest {
  string clientId         = 1;
  TipoChave tipoChave     = 2;
  string chave            = 3;
  TipoConta tipoConta     = 4;
}

message RegistraChavePixResponse {
  string clientId = 1;
  string pixId    = 2;
}

message RemoveChavePixRequest{
  string clientId = 1;
  string pixId    = 2;
}
message RemoveChavePixResponse{
  string clientId = 1;
  string pixId    = 2;
}